[package]
name = "wispd-forward"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
futures-util = "0.3"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true
wisp-monitor = { path = "../../crates/wisp-monitor" }
ssh2 = "0.9.5"
