[package]
name = "wispd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
iced = { version = "0.14.0", features = ["tokio"] }
iced_layershell = "0.15.0"
serde.workspace = true
tokio.workspace = true
toml = "1"
tracing.workspace = true
tracing-subscriber.workspace = true
wisp-source = { path = "../../crates/wisp-source" }
wisp-types = { path = "../../crates/wisp-types" }
