[package]
name = "wispd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
iced = { version = "0.14.0", features = ["tokio", "image", "advanced"] }
iced_layershell = { git = "https://github.com/0xferrous/exwlshelleventloop", branch = "feat/compositor-default-output", package = "iced_layershell" }
serde.workspace = true
tokio.workspace = true
toml = "1"
tracing.workspace = true
tracing-subscriber.workspace = true
wayland-client = "0.31.13"
wayland-protocols = { version = "0.32.11", default-features = false, features = ["client"] }
wisp-source = { path = "../../crates/wisp-source" }
wisp-types = { path = "../../crates/wisp-types" }
