[package]
name = "wisp-source"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
wisp-types = { path = "../wisp-types" }
zbus.workspace = true

[dev-dependencies]
futures-util = "0.3"
